feat: add config for fff (call with just f), ~ goes home in ranger

--- a/env/.env_global
+++ b/env/.env_global
@@ -85,6 +85,9 @@ export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 # NNN config
 do-source "$DOTFILES"/nnn/conf.sh
 
+# FFF config
+do-source "$DOTFILES"/fff/conf.sh
+
 # Less
 export LESS=-R
 export LESS_TERMCAP_mb=$'\E[1;31m'     # begin blink
