--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -350,6 +350,7 @@ map YD shell cp %s ~/Documents
 map gw cd ~/.dotfiles/assets/wallpapers
 map gi cd ~/git
 map gh cd ~
+map ~  cd ~
 map ge cd /etc
 map gu cd /usr
 map gl cd -r .
