--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,15 @@
-font_family         FiraCode Nerd Font
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
+font_family             FiraCode Nerd Font
+bold_font               auto
+italic_font             auto
+bold_italic_font        auto
 
-font_size           11.0
-adjust_line_height  0
-adjust_column_width 0
-disable_ligatures   never
-scrollback_lines    50000
-scrollback_pager    less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
+font_size               11.0
+adjust_line_height      0
+adjust_column_width     0
+disable_ligatures       never
+scrollback_lines        50000
+scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
+allow_remote_control    yes
 
-include             ~/.cache/wal/colors-kitty.conf
-background          #000000
+include                 ~/.cache/wal/colors-kitty.conf
+background              #000000
