--- a/env/.env_global
+++ b/env/.env_global
@@ -61,7 +61,7 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
  else
    export EDITOR='nvim'
  fi
-export PAGER=bat
+export PAGER=less
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
 export DOTFILES=$HOME/.dotfiles
@@ -125,7 +125,7 @@ alias l='ls -lChFrS --color=auto'
 alias ls='ls -aF --color=auto'
 alias df='df -Th'
 alias du='du -h'
-alias cp='cp -i'
+alias cp='cp -fv'
 
 # Regular utils
 alias shit='sudo $(history -p \!\!)'
