--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -12,18 +12,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -5;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -5;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -66,6 +66,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "class_g = 'Screenkey'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -141,6 +142,7 @@ inactive-opacity-override = false;
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
+
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
 
@@ -201,6 +203,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  "class_g = 'Screenkey'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
