--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,7 @@ disable_ligatures       never
 scrollback_lines        50000
 scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
 allow_remote_control    yes
+enabled_layouts         all
 
 include                 ~/.cache/wal/colors-kitty.conf
 background              #000000
