--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,8 @@ bold_font               auto
 italic_font             auto
 bold_italic_font        auto
 
+font_features           FiraCodeNerdFontComplete-Regular +zero +onum +ss01 +ss03 +ss04 +ss05 +ss06
+
 font_size               11.0
 adjust_line_height      0
 adjust_column_width     0
