--- a/i3/config
+++ b/i3/config
@@ -382,7 +382,7 @@ exec --no-startup-id mons -a > /dev/null 2>&1
 # 
 # COMPOSITOR - window compositor
 #
-exec --no-startup-id picom -b --config "$HOME/.dotfiles/picom/picom.conf"
+exec --no-startup-id picom --experimental-backends -b --config "$HOME/.dotfiles/picom/picom.conf"
 
 #
 # UDISKIE - automount
