--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -166,7 +166,12 @@ opacity-rule = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase";
+blur:
+{
+  method = "gaussian";
+  size = 15;
+  deviation = 10.0;
+};
 blur-strength = 5;
 
 # Blur background of semi-transparent / ARGB windows. 
