feat: android sdk root envar

--- a/env/.env_global
+++ b/env/.env_global
@@ -82,6 +82,9 @@ export VULKAN_SDK=$VULKAN/VulkanSDK/1.1.73.0/x86_64
 export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
+ # Android SDK
+ export ANDROID_SDK_ROOT=$PROGRAMS/Android/sdk
+
 # NNN config
 do-source "$DOTFILES"/nnn/conf.sh
 
