--- a/polybar/config
+++ b/polybar/config
@@ -449,7 +449,7 @@ interval = 1.0
 
 date = %Y-%m-%d%
 
-time = %H:%M:%S
+time = %H:%M
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
