feat: fix hidlago-randr, add thefuck to env, fix i3 startup sequence

--- a/env/.env_global
+++ b/env/.env_global
@@ -12,6 +12,11 @@ function do-source {
     fi
 }
 
+# does the command exist?
+function cmd-exists {
+   type "$1" &> /dev/null;
+}
+
 # Weather
 weather(){
     curl https://wttr.in/$1\?1Fn
@@ -193,6 +198,10 @@ alias sdisable='sudo systemctl disable'
 alias catradio='mpv https://shoutcast.ccma.cat/ccma/catalunyaradioHD.mp3'
 alias rac1='mpv https://streaming.rac1.cat'
 
+# thefuck aliases
+if cmd-exists thefuck; then
+    eval $(thefuck --alias)
+fi
 
 # ZSH bindings
 [ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
