feat: change to rts-engine-private

--- a/env/.env_global
+++ b/env/.env_global
@@ -77,7 +77,7 @@ export PROJECTS=$PROJ
 export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
-export RTS=$PROJ/rts-engine
+export RTS=$PROJ/rts-engine-private
 export TOPCAT=$PROGRAMS/Topcat
 export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:.
 
