feat: add readability-js support, remove password_fill script (already with distro)

--- a/env/.env_global
+++ b/env/.env_global
@@ -21,8 +21,7 @@ function cmd-exists {
 weather(){
     curl https://wttr.in/$1\?1Fn
 }
-wfull(){
-    curl https://wttr.in/$1
+wfull(){ curl https://wttr.in/$1
 }
 wimg(){
     kitty icat https://v3.wttr.in/$1.png
@@ -116,7 +115,7 @@ export GPG_TTY
 
 if command -v npm &> /dev/null
 then
-    export NODE_PATH=$(npm root -g)
+    export NODE_PATH=$NODE_PATH:$(npm root -g)
 fi
 
 # QT
