feat: add starship prompt to env

--- a/env/.env_global
+++ b/env/.env_global
@@ -204,6 +204,11 @@ if cmd-exists thefuck; then
     eval $(thefuck --alias)
 fi
 
+# starship prompt
+if cmd-exists starship; then
+    eval "$(starship init zsh)"
+fi
+
 # ZSH bindings
 [ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
 
