--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -168,11 +168,12 @@ opacity-rule = [
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur:
 {
-  method = "gaussian";
+  # method = "gaussian";
+  method = "kawase";
   size = 15;
   deviation = 10.0;
 };
-blur-strength = 5;
+blur-strength = 4;
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
