fix: minor issue

--- a/env/.env_global
+++ b/env/.env_global
@@ -113,8 +113,7 @@ export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
 
-if command -v npm &> /dev/null
-then
+if cmd-exists npm; then
     export NODE_PATH=$NODE_PATH:$(npm root -g)
 fi
 
