--- a/rofi/config
+++ b/rofi/config
@@ -1,5 +1,6 @@
 # Default
 rofi.theme: /home/tsagrista/.dotfiles/rofi/themes/sidetab.rasi
+rofi.modi:                           run,drun,window,ssh
 rofi.font:                           "FiraCode Nerd Font" 16
 rofi.lines:                          20
 rofi.show-icons:                     true
