fix: mdbexp floating

--- a/i3/config
+++ b/i3/config
@@ -244,6 +244,7 @@ for_window [class="uk-ac-starlink-topcat-Driver"] floating enable
 for_window [class="Audacity"] floating enable
 for_window [class="Terraria.bin.x86_64"] floating enable
 for_window [class="gaia-cu3-fl-flse-test-FlseTestClient"] floating enable
+for_window [class="gaia-cu1-maindb-dbexplorer-progs-ExplorerApplication"] floating enable
 
 
 
