--- a/i3/config
+++ b/i3/config
@@ -245,6 +245,7 @@ for_window [class="Audacity"] floating enable
 for_window [class="Terraria.bin.x86_64"] floating enable
 for_window [class="gaia-cu3-fl-flse-test-FlseTestClient"] floating enable
 for_window [class="gaia-cu1-maindb-dbexplorer-progs-ExplorerApplication"] floating enable
+for_window [class="mpv"] floating enable
 
 
 
