--- a/i3/config
+++ b/i3/config
@@ -220,32 +220,32 @@ assign [class="Steam"] $ws5
 for_window [class="Lxappearance"] floating enable sticky enable
 for_window [class="qt5ct"] floating enable sticky enable
 for_window [class="Qtconfig-qt4"] floating enable sticky enable
-for_window [title="alsamixer"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="GParted"] floating enable
 for_window [class="Skype"] floating enable
 for_window [class="zoom"] floating enable
 for_window [class="telegram-desktop"] floating enable
 for_window [class="Grub-customizer"] floating enable
-for_window [title="Volume Control"] floating enable
 for_window [class="Gsimplecal"] floating enable
 for_window [class="Arandr"] floating enable
 for_window [class="Nemo"] floating enable
 for_window [class="Gaia Sky"] floating enable
 for_window [class="RTS Engine"] floating enable
 for_window [class="obs"] floating enable
-for_window [title="deusex.exe"] floating enable
-for_window [title="megasync"] floating enable
 for_window [class="timeanalysis.py"] floating enable
 for_window [class="Yad"] floating enable
-for_window [title="Blender User Preferences"] floating enable
-for_window [title="Blender Preferences"] floating enable
 for_window [class="uk-ac-starlink-topcat-Driver"] floating enable
 for_window [class="Audacity"] floating enable
 for_window [class="Terraria.bin.x86_64"] floating enable
 for_window [class="gaia-cu3-fl-flse-test-FlseTestClient"] floating enable
 for_window [class="gaia-cu1-maindb-dbexplorer-progs-ExplorerApplication"] floating enable
 for_window [class="mpv"] floating enable
+for_window [title="Blender User Preferences"] floating enable
+for_window [title="Blender Preferences"] floating enable
+for_window [title="alsamixer"] floating enable
+for_window [title="Volume Control"] floating enable
+for_window [title="deusex.exe"] floating enable
+for_window [title="SteamVR Status"] floating enable
 
 
 
