--- a/i3/config
+++ b/i3/config
@@ -234,12 +234,13 @@ for_window [class="RTS Engine"] floating enable
 for_window [class="obs"] floating enable
 for_window [class="timeanalysis.py"] floating enable
 for_window [class="Yad"] floating enable
-for_window [class="uk-ac-starlink-topcat-Driver"] floating enable
+for_window [class=".*starlink-topcat.*"] floating enable
 for_window [class="Audacity"] floating enable
 for_window [class="Terraria.bin.x86_64"] floating enable
 for_window [class="gaia-cu3-fl-flse-test-FlseTestClient"] floating enable
 for_window [class="gaia-cu1-maindb-dbexplorer-progs-ExplorerApplication"] floating enable
 for_window [class="mpv"] floating enable
+for_window [class=".*jprofiler.*"] floating enable
 for_window [title="Blender User Preferences"] floating enable
 for_window [title="Blender Preferences"] floating enable
 for_window [title="alsamixer"] floating enable
