feat: more stuff for lf

--- a/env/.env_global
+++ b/env/.env_global
@@ -93,6 +93,9 @@ export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 # NNN config
 do-source "$DOTFILES"/nnn/conf.sh
 
+# LF config
+do-source "$DOTFILES"/lf/lf_icons.sh
+
 # FFF config
 do-source "$DOTFILES"/fff/conf.sh
 
