feat: aliased rsync with --progress

--- a/env/.env_global
+++ b/env/.env_global
@@ -136,6 +136,7 @@ alias ls='ls -aF --color=auto'
 alias df='df -Th'
 alias du='du -h'
 alias cp='cp -fv'
+alias rsync='rsycn --progress'
 
 # Regular utils
 alias shit='sudo $(history -p \!\!)'
