feat: add wireguard aliases

--- a/env/.env_global
+++ b/env/.env_global
@@ -138,6 +138,10 @@ alias du='du -h'
 alias cp='cp -fv'
 alias rsync='rsync --progress'
 
+# Wireguard connect and disconnect
+alias wgc='sudo wg-quick up'
+alias wgd='sudo wg-quick down'
+
 # Regular utils
 alias shit='sudo $(history -p \!\!)'
 alias diff='diff --color=auto'
