feat: yay aliased to paru, tabs set to background in qtb

--- a/env/.env_global
+++ b/env/.env_global
@@ -190,6 +190,9 @@ alias bc='bc -l'
 # Image viewer
 alias img='sxiv'
 
+# yay and paru
+alias yay='paru'
+
 # Screen off script using vbetool
 alias off='~/.dotfiles/bin/monitor_off'
 
