--- a/env/.env_global
+++ b/env/.env_global
@@ -129,10 +129,10 @@ fi
 # 
 
 # Format for listings and directory usages
-alias ll='ls -alFh --color=auto'
-alias la='ls -alFhS --color=auto'
-alias l='ls -lChFrS --color=auto'
-alias ls='ls -aF --color=auto'
+alias ll='exa -alFh --color=auto'
+alias la='exa -alFhS --color=auto'
+alias l='exa -lChFrS --color=auto'
+alias ls='exa -aF --color=auto'
 alias df='df -Th'
 alias du='du -h'
 alias cp='cp -fv'
