feat: some rust replacements like fg or procs

--- a/env/.env_global
+++ b/env/.env_global
@@ -147,6 +147,8 @@ alias shit='sudo $(history -p \!\!)'
 alias diff='diff --color=auto'
 alias grep='grep --color=auto'
 alias wifi='nmtui'
+alias ag='rg'
+alias ps='procs'
 cl () {
     cd $1
     ls
