--- a/env/.env_global
+++ b/env/.env_global
@@ -76,6 +76,7 @@ export PROJECTS=$PROJ
 export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
+export GSC=$PROJ/gaiasky-catgen
 export RTS=$PROJ/rts-engine-private
 export TOPCAT=$PROGRAMS/Topcat
 export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:.
