feat: add ~/.cargo/bin to path for cargo-downloaded programs

--- a/env/.env_global
+++ b/env/.env_global
@@ -79,7 +79,7 @@ export GS=$PROJ/gaiasky
 export GSC=$PROJ/gaiasky-catgen
 export RTS=$PROJ/rts-engine-private
 export TOPCAT=$PROGRAMS/Topcat
-export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:.
+export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.cargo/bin:.
 
 # Vulkan SDK
 export VULKAN=$HOME/Workspaces/vulkan
