--- a/env/.env_global
+++ b/env/.env_global
@@ -78,7 +78,12 @@ export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
 export GSC=$PROJ/gaiasky-catgen
 export RTS=$PROJ/rts-engine-private
+export WEB=$PROJ/langurmonkey.gitlab.io
+
+# Programs
 export TOPCAT=$PROGRAMS/Topcat
+
+# Path
 export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.cargo/bin:.
 
 # Vulkan SDK
@@ -112,7 +117,7 @@ export LESS_TERMCAP_ue=$'\E[0m'        # reset underline
 
 # Other utils
 export RANGER_RELOAD_RC=FALSE
-export TERMINAL=termite
+export TERMINAL=kitty
 export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
@@ -122,8 +127,8 @@ if cmd-exists npm; then
 fi
 
 # QT
- QT_QPA_PLATFORMTHEME=qt5ct
- QT_STYLE_OVERRIDE=gtk2
+export QT_QPA_PLATFORMTHEME=qt5ct
+export QT_STYLE_OVERRIDE=gtk2
 
 #
 # ALIASES
