--- a/env/.env_global
+++ b/env/.env_global
@@ -79,6 +79,7 @@ export GS=$PROJ/gaiasky
 export GSC=$PROJ/gaiasky-catgen
 export RTS=$PROJ/rts-engine-private
 export WEB=$PROJ/langurmonkey.gitlab.io
+export PHC=$PROJ/phd_thesis
 
 # Programs
 export TOPCAT=$PROGRAMS/Topcat
