feat: add crypto and corona

--- a/env/.env_global
+++ b/env/.env_global
@@ -217,6 +217,14 @@ alias sdisable='sudo systemctl disable'
 alias catradio='mpv https://shoutcast.ccma.cat/ccma/catalunyaradioHD.mp3'
 alias rac1='mpv https://streaming.rac1.cat'
 
+# Corona info
+alias corona='curl https://corona-stats.online | bat'
+# Crypto
+alias crypto='curl rate.sx'
+alias btc='curl rate.sx/btc'
+alias eth='curl rate.sx/eth'
+alias ltc='curl rate.sx/ltc'
+
 # thefuck aliases
 if cmd-exists thefuck; then
     eval $(thefuck --alias)
