fix: catradio url

--- a/env/.env_global
+++ b/env/.env_global
@@ -131,6 +131,9 @@ fi
 export QT_QPA_PLATFORMTHEME=qt5ct
 export QT_STYLE_OVERRIDE=gtk2
 
+# Calibre
+export CALIBRE_USE_DARK_PALETTE=1
+
 #
 # ALIASES
 # 
@@ -214,7 +217,7 @@ alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
 
 # Radio, etc.
-alias catradio='mpv https://shoutcast.ccma.cat/ccma/catalunyaradioHD.mp3'
+alias catradio='mpv http://opml.radiotime.com/Tune.ashx?id=s45275&partnerId=MOUvqYjy&serial=zwB2kAx4u3*v'
 alias rac1='mpv https://streaming.rac1.cat'
 
 # Corona info
