--- a/env/.env_global
+++ b/env/.env_global
@@ -172,7 +172,7 @@ alias heka='ssh -tX tsagrista@heka.ari.uni-heidelberg.de'
 alias herschel='ssh -tX tsagrista@herschel.iwr.uni-heidelberg.de'
 alias hidalgo='ssh -tX tsagrista@hidalgo'
 alias chimp='ssh -tX user@chimp'
-alias centaurus='ssh -tX sagrista@centaurus.ari.uni-heidelberg.de'
+alias centaurus='ssh -tX tsagrista@centaurus.ari.uni-heidelberg.de'
 alias canisminor='ssh -tX sagrista@canisminor.ari.uni-heidelberg.de'
 alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
 alias welcome='ssh -tX toni.sag@welcome.ari.uni-heidelberg.de'
