feat: add default JVM and JRE paths

--- a/env/.env_global
+++ b/env/.env_global
@@ -65,7 +65,9 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
  else
    export EDITOR='nvim'
  fi
-export PAGER=less
+export PAGER="less"
+export MANPAGER="sh -c 'col -bx | bat -l man -p'"
+#export MANPAGER="nvim -c 'set ft=man' -"
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
 export DOTFILES=$HOME/.dotfiles
@@ -80,6 +82,10 @@ export GSC=$PROJ/gaiasky-catgen
 export RTS=$PROJ/rts-engine-private
 export WEB=$PROJ/langurmonkey.gitlab.io
 export PHD=$PROJ/phd_thesis
+
+# JVM
+export JAVA_HOME=/usr/lib/jvm/default
+export JDK_HOME=/usr/lib/jvm/default-runtime
 
 # Programs
 export TOPCAT=$PROGRAMS/Topcat
