feat: lf with images:

--- a/env/.env_global
+++ b/env/.env_global
@@ -107,6 +107,8 @@ export ANDROID_SDK_ROOT=$PROGRAMS/Android/sdk
 do-source "$DOTFILES"/nnn/conf.sh
 
 # LF config
+export OPENER="$DOTFILES/lf/open"
+alias lf=lfi
 do-source "$DOTFILES"/lf/lf_icons.sh
 
 # FFF config
