feat: install4j to floating

--- a/i3/config
+++ b/i3/config
@@ -243,6 +243,7 @@ for_window [class="gaia-cu1-maindb-dbexplorer-progs-ExplorerApplication"] floati
 for_window [class="mpv"] floating enable
 for_window [class=".*jprofiler.*"] floating enable
 for_window [class="FreeTube"] floating enable
+for_window [class="install4j-com-install4j-Install4JGUI"] floating enable
 for_window [title="Blender User Preferences"] floating enable
 for_window [title="Blender Preferences"] floating enable
 for_window [title="alsamixer"] floating enable
