feat: add lfcd (not working)

--- a/env/.env_global
+++ b/env/.env_global
@@ -108,8 +108,11 @@ do-source "$DOTFILES"/nnn/conf.sh
 
 # LF config
 export OPENER="$DOTFILES/lf/open"
-alias lf=lfi
 do-source "$DOTFILES"/lf/lf_icons.sh
+LFCD="/path/to/lfcd.sh"
+if [ -f "$LFCD" ]; then
+    source "$LFCD"
+fi
 
 # FFF config
 do-source "$DOTFILES"/fff/conf.sh
