--- a/env/.env_global
+++ b/env/.env_global
@@ -109,7 +109,8 @@ do-source "$DOTFILES"/nnn/conf.sh
 # LF config
 export OPENER="$DOTFILES/lf/open"
 do-source "$DOTFILES"/lf/lf_icons.sh
-LFCD="/path/to/lfcd.sh"
+# source lfcd
+LFCD="$DOTFILES/lf/lfcd.sh"
 if [ -f "$LFCD" ]; then
     source "$LFCD"
 fi
