--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,13 @@
-font_family             FiraCode Nerd Font
+font_family             CaskaydiaCove Nerd Font
 bold_font               auto
 italic_font             auto
 bold_italic_font        auto
-
-font_features           FiraCodeNerdFontComplete-Regular +zero +onum +ss01 +ss03 +ss04 +ss05 +ss06
+#font_features           FiraCodeNerdFontComplete-Regular +zero +onum +ss01 +ss03 +ss04 +ss05 +ss06
 
 font_size               11.0
 adjust_line_height      0
 adjust_column_width     0
-disable_ligatures       always
+disable_ligatures       never
 scrollback_lines        50000
 scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
 allow_remote_control    yes
