--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,7 @@
-font_family             CaskaydiaCove Nerd Font
+font_family             FiraCode Nerd Font Mono
 bold_font               auto
 italic_font             auto
 bold_italic_font        auto
-#font_features           FiraCodeNerdFontComplete-Regular +zero +onum +ss01 +ss03 +ss04 +ss05 +ss06
 
 font_size               11.0
 adjust_line_height      0
