feat: make dpi changes easier in hidalgo

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -22,9 +22,10 @@ export SOFCOMMON="${SOFWORKSPACE}/DPAC/CU1/software/common"
 export ANT_HOME=/home/tsagrista/Workspaces/IDEA-ws/DPAC/CU1/software/common/apache-ant-1.10.5
 
 export CU3=$WS/DPAC/CU3/software/
-export FL_TR=$CU3/FL/Trunk
+export FL_BASE=$CU3/FL
+export FL_TR=$FL_BASE/Trunk
 export FL_HOME=$FL_TR
-export FL_22=$CU3/FL/R_22.0.x
+export FL_22=$FL_BASE/R_22.0.x
 export CATGEN_HOME=$CU3/CatGen/Trunk
 export FLSE=$CU3/FLSE
 
