--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font        auto
 font_size               11.0
 adjust_line_height      0
 adjust_column_width     0
-disable_ligatures       never
+disable_ligatures       always
 scrollback_lines        50000
 scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
 allow_remote_control    yes
