--- a/env/.env_arch
+++ b/env/.env_arch
@@ -4,7 +4,7 @@ export JAVA_HOME=/usr/lib/jvm/default
 
 # Updates and so on
 alias update='sudo pacman -Syu'
-alias updateaur='yay -Syu'
+alias updateaur='paru -Syu'
 alias install='sudo pacman -S'
 alias remove='sudo pacman -R'
 
