feat: hidpi to fhd in hidalgo

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -24,8 +24,9 @@ export ANT_HOME=/home/tsagrista/Workspaces/IDEA-ws/DPAC/CU1/software/common/apac
 export CU3=$WS/DPAC/CU3/software/
 export FL_BASE=$CU3/FL
 export FL_TR=$FL_BASE/Trunk
-export FL_HOME=$FL_TR
 export FL_22=$FL_BASE/R_22.0.x
+export FL_2203=$FL_BASE/R_22.0.3
+export FL_HOME=$FL_2203
 export CATGEN_HOME=$CU3/CatGen/Trunk
 export FLSE=$CU3/FLSE
 
