feat: add vpnstatus

--- a/env/.env_global
+++ b/env/.env_global
@@ -178,6 +178,7 @@ cl () {
 
 # VPN
 alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
+alias vpnstatus='curl https://am.i.mullvad.net/connected'
 # Docker with sudo by default
 alias docker='sudo docker'
 # ARI machines
