--- a/i3/config
+++ b/i3/config
@@ -61,6 +61,9 @@ bindsym $mod+Shift+Escape exec ~/.dotfiles/bin/rofi-powermenu
 #bindsym $mod+shift+d exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 
+# pulsemixer
+bindsym $mod+Shift+p exec $myterm --class wm-floating pulsemixer
+
 # dmenu shortcuts
 #bindsym $mod+ctrl+s exec "$(cat $HOME/.dotfiles/i3/config $HOME/.dotfiles/qutebrowser/config.py $HOME/.dotfiles/vim/.vimrc | dmenu -p 'shortcuts' -l 10)"
 
@@ -158,7 +161,12 @@ bindsym $mod+Print exec scrot -e 'mv $f /tmp/ && gimp /tmp/$f'
 bindsym $mod+Shift+w exec qutebrowser
 bindsym $mod+Control+w exec firefox
 bindsym $mod+Shift+t exec thunderbird
-bindsym $mod+Shift+f exec $HOME/.dotfiles/bin/ranger-term "`$HOME/.dotfiles/bin/xcwd`"
+bindsym $mod+Shift+f exec $myterm --class wm-floating ranger "`$HOME/.dotfiles/bin/xcwd`"
+bindsym $mod+Shift+b exec $myterm --class wm-floating lf "`$HOME/.dotfiles/bin/xcwd`"
+
+# Min and max sizes for floating windows
+floating_minimum_size 450x450
+floating_maximum_size -1x-1
 
 # WORKSPACES
 #set $ws1 "1 "
@@ -246,11 +254,10 @@ for_window [class="mpv"] floating enable
 for_window [class=".*jprofiler.*"] floating enable
 for_window [class="FreeTube"] floating enable
 for_window [class="install4j-com-install4j-Install4JGUI"] floating enable
+for_window [class="wm-floating"] floating enable
 for_window [title="Blender User Preferences"] floating enable
 for_window [title="Blender Preferences"] floating enable
-for_window [title="alsamixer"] floating enable
 for_window [title="Volume Control"] floating enable
-for_window [title="deusex.exe"] floating enable
 for_window [title="SteamVR Status"] floating enable
 
 # reload the configuration file
@@ -319,7 +326,7 @@ mode "$mode_gaps_outer" {
 
 # Screen lockers
 bindsym $mod+shift+x exec --no-startup-id i3lock-fancy
-bindsym $mod+shift+z exec --no-startup-id $myterm -e slock
+bindsym $mod+shift+z exec --no-startup-id $myterm --class wm-floating -e slock
 
 # Resize window (you can also use the mouse for that)
 bindsym $mod+r mode "resize"
