--- a/i3/config
+++ b/i3/config
@@ -137,9 +137,11 @@ bindsym $mod+a focus parent
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPlay exec playerctl play-pause
-# mpd controls
-bindsym $mod+period exec mpc next
-bindsym $mod+comma exec mpc prev
+# mpd controls via mpc with $mod+Control
+bindsym $mod+Control+period exec mpc next
+bindsym $mod+Control+comma exec mpc prev
+bindsym $mod+Control+p exec mpc toggle
+bindsym $mod+Control+s exec mpc stop
 # pulse audio controls
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute `pacmd list-sinks | awk '/* index:/{print $3}'` toggle 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume `pacmd list-sinks | awk '/* index:/{print $3}'` +1%
