--- a/i3/config
+++ b/i3/config
@@ -134,13 +134,13 @@ bindsym $mod+n exec --no-startup-id $HOME/.dotfiles/bin/i3-new-workspace
 bindsym $mod+a focus parent
 
 # media player controls XF86Audio and $mod+Control
-bindsym XF86AudioPrev exec mpc prev
-bindsym XF86AudioNext exec mpc next
-bindsym XF86AudioPlay exec mpd toggle
-bindsym $mod+Control+period exec mpc next
-bindsym $mod+Control+comma exec mpc prev
-bindsym $mod+Control+p exec mpc toggle
-bindsym $mod+Control+s exec mpc stop
+bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym $mod+Control+period exec playerctl next
+bindsym $mod+Control+comma exec playerctl previous
+bindsym $mod+Control+p exec playerctl play-pause
+bindsym $mod+Control+s exec playerctl stop
 bindsym $mod+Control+z exec mpc random
 # pulse audio controls
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute `pacmd list-sinks | awk '/* index:/{print $3}'` toggle 
@@ -419,6 +419,11 @@ exec --no-startup-id $HOME/.dotfiles/bin/togglepicom
 # RANDR - monitor setup
 #
 exec_always --no-startup-id $HOME/.local/bin/current-randr.sh
+
+#
+# mpDris2 - MPRIS2 support for mpd
+# 
+exec_always --no-startup-id mpDris2
 
 #
 # WALLPAPER - after screens have been setup
