--- a/env/.env_global
+++ b/env/.env_global
@@ -8,7 +8,7 @@
 function do-source {
     if [ -f $1 ]; then
         #echo "Sourcing $1"
-        source $1
+        source $1 2>/dev/null
     fi
 }
 
@@ -26,25 +26,6 @@ wfull(){ curl https://wttr.in/$1
 wimg(){
     kitty icat https://v3.wttr.in/$1.png
 }
-
-# OH-MY-ZSH
-# Path to your oh-my-zsh installation.
-export ZSH="/home/tsagrista/.oh-my-zsh"
-
-# Set name of the theme to load. Optionally, if you set this to "random"
-# it'll load a random theme each time that oh-my-zsh is loaded.
-# See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
-#ZSH_THEME="maran"
-ZSH_THEME="ys"
-DEFAULT_USER=tsagrista
-
-# Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
-# Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-# Example format: plugins=(rails git textmate ruby lighthouse)
-# Add wisely, as too many plugins slow down shell startup.
-plugins=( z git fzf colorize vi-mode zsh-autosuggestions zsh-syntax-highlighting )
-
-do-source "$ZSH"/oh-my-zsh.sh
 
 # Add GPD
 export GPD_TTY=$(tty)
@@ -149,110 +130,29 @@ export CALIBRE_USE_DARK_PALETTE=1
 #
 # ALIASES
 # 
+do-source $DOTFILES/env/.aliases
 
-# Format for listings and directory usages
-alias ll='exa -alFh --color=auto'
-alias la='exa -alFhS --color=auto'
-alias l='exa -lChFrS --color=auto'
-alias ls='exa -aF --color=auto'
-alias df='df -Th'
-alias du='du -h'
-alias cp='cp -fv'
-alias rsync='rsync --progress'
-
-# Wireguard connect and disconnect
-alias wgc='sudo wg-quick up'
-alias wgd='sudo wg-quick down'
-
-# Regular utils
-alias shit='sudo $(history -p \!\!)'
-alias diff='diff --color=auto'
-alias grep='grep --color=auto'
-alias wifi='nmtui'
-alias ag='rg'
-alias ps='procs'
-cl () {
-    cd $1
-    ls
-}
-
-# VPN
-alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
-alias vpnstatus='curl https://am.i.mullvad.net/connected'
-# Docker with sudo by default
-alias docker='sudo docker'
-# ARI machines
-alias andromeda='ssh -tX tsagrista@andromeda.ari.uni-heidelberg.de "cd /work/Tux/tsagrista ; bash"'
-alias hercules='ssh -tX tsagrista@hercules.ari.uni-heidelberg.de "cd /work/www-staff/html/gaiasandbox ; bash"'
-alias heka='ssh -tX tsagrista@heka.ari.uni-heidelberg.de'
-alias herschel='ssh -tX tsagrista@herschel.iwr.uni-heidelberg.de'
-alias hidalgo='ssh -tX tsagrista@hidalgo'
-alias chimp='ssh -tX user@chimp'
-alias centaurus='ssh -tX tsagrista@centaurus.ari.uni-heidelberg.de'
-alias canisminor='ssh -tX sagrista@canisminor.ari.uni-heidelberg.de'
-alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
-alias welcome='ssh -tX toni.sag@welcome.ari.uni-heidelberg.de'
-alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
-
-# Mounts
-alias mountqnap='sudo mkdir -p /run/media/QNAP/Multimedia && sudo mount /run/media/QNAP/Multimedia'
-alias umountqnap='sudo umount /run/media/QNAP/Multimedia'
-
-# Dotfiles git alias
-alias dotfiles="git -C $HOME/.dotfiles"
-alias dot="git -C $HOME/.dotfiles"
-
-# Mus invokes ncmpcpp
-alias mus="ncmpcpp"
-
-# Movement random
-alias up="cd .."
-alias back="cd -"
-
-# Best calculator
-alias bc='bc -l'
-
-# Image viewer
-alias img='sxiv'
-
-# yay and paru
-alias yay='paru'
-
-# Screen off script using vbetool
-alias off='~/.dotfiles/bin/monitor_off'
-
-# Systemd
-alias sstatus='sudo systemctl status'
-alias sstart='sudo systemctl start'
-alias srestart='sudo systemctl restart'
-alias sstop='sudo systemctl stop'
-alias senable='sudo systemctl enable'
-alias sdisable='sudo systemctl disable'
-
-# Radio, etc.
-alias catradio='mpv http://opml.radiotime.com/Tune.ashx?id=s45275&partnerId=MOUvqYjy&serial=zwB2kAx4u3*v'
-alias rac1='mpv https://streaming.rac1.cat'
-
-# Corona info
-alias corona='curl https://corona-stats.online | bat'
-# Crypto
-alias crypto='curl rate.sx'
-alias btc='curl rate.sx/btc'
-alias eth='curl rate.sx/eth'
-alias ltc='curl rate.sx/ltc'
-
-# thefuck aliases
-if cmd-exists thefuck; then
-    eval $(thefuck --alias)
-fi
-
-# starship prompt
+# Starship prompt
 if cmd-exists starship; then
     eval "$(starship init zsh)"
 fi
 
 # ZSH bindings
-[ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
+[ -f ~/.dotfiles/zsh/.zsh_bindings ] && source ~/.dotfiles/zsh/.zsh_bindings
+
+# ZSH PLUGINS
+
+# Load zsh-syntax-highlighting
+do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+
+# Load zsh-autosuggestions
+do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+
+# Load colorize
+do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
+
+# Load z
+do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 
 #
 # ENVIRONMENT INIT
