--- a/i3blocks/config
+++ b/i3blocks/config
@@ -25,6 +25,7 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 # Change $SCRIPT_DIR to the location of your scripts!
+LOCAL_DIR=/home/tsagrista/.dotfiles/i3blocks/scripts
 SCRIPT_DIR=/usr/lib/i3blocks
 command=$SCRIPT_DIR/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
@@ -37,18 +38,17 @@ separator_block_width=0
 
 [window title]
 command=xdotool getactivewindow getwindowname
-interval=3
+interval=1
 color=#ffffff
 min_width=400
 align=center
 
 [separator]
 
-[mediaplayer]
+[music]
 label= 
-command=mpc current
-interval=5
-signal=10
+command=$LOCAL_DIR/music
+interval=2
 color=#ff8a8a
 border=#ff8a8a
 border_top=0
@@ -58,8 +58,9 @@ border_bottom=2
 
 [separator]
 
-[kbdd_layout]
-interval=persist
+[keyboard]
+command=$LOCAL_DIR/keyboard
+interval=2
 label=  
 color=#ffffff
 border=#1990B7
@@ -70,8 +71,23 @@ border_bottom=2
 
 [separator]
 
+[updates-arch]
+command=$LOCAL_DIR/updates-arch
+label= 
+interval=1800
+markup=pango
+color=#000000
+background=#888888
+border=#888888
+border_right=5
+border_left=5
+markup=pango
+
+[separator]
+
 [disk]
-label= /home 
+command=$LOCAL_DIR/disk
+label= /h:
 instance=/home
 interval=30
 color=#000000
@@ -79,11 +95,12 @@ background=#ffbb33
 border=#ffbb33
 border_right=5
 border_left=5
+markup=pango
 
 [separator]
 
-[cpu_usage]
-label= 
+[cpu]
+command=$LOCAL_DIR/cpu
 interval=10
 color=#000000
 background=#33aa7a
@@ -92,59 +109,39 @@ border_right=5
 border_left=5
 
 [memory]
-label= 
+command=$LOCAL_DIR/memory
+label= 
 interval=5
 color=#000000
-background=#ff8833
-border=#ff8833
-border_right=5
-border_left=5
-
-[temperature]
-label= 
-interval=10
-color=#000000
-background=#ff5858
-border=#ff5858
+background=#ff9a9a
+border=#ff9a9a
 border_right=5
 border_left=5
 
 [separator]
 
-[wifi]
-label= 
-instance=wlp2s0
-interval=60
-color=#000000
-background=#444411
-border=#444411
-border_right=5
-border_left=5
-
-[separator]
-
-[volume]
-label= 
-instance=Master
+[pavol]
+command=$LOCAL_DIR/volume
 interval=1
-color=#558899
-signal=10
+color=#ffffff
+border=#2aaa4a
+border_top=0
+border_right=0
+border_left=0
+border_bottom=2
 
-[separator]
-
-[batterybar]
+[battery]
+command=$LOCAL_DIR/battery
 interval=30
 markup=pango
 
-[separator]
-
 [time]
-command=echo "<span font='FiraCode Nerd Font Bold'>$(date '+%Y-%m-%d %H:%M:%S')</span>"
+command=$LOCAL_DIR/time
 markup=pango
 interval=5
 color=#000000
-background=#44aaff
-border=#44aaff
+background=#4488bb
+border=#4488bb
 border_right=5
 border_left=5
 
