--- a/i3blocks/config
+++ b/i3blocks/config
@@ -25,36 +25,36 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 # Change $SCRIPT_DIR to the location of your scripts!
+
+BORDER_W=2
 LOCAL_DIR=/home/tsagrista/.dotfiles/i3blocks/scripts
 SCRIPT_DIR=/usr/lib/i3blocks
+
 command=$SCRIPT_DIR/$BLOCK_NAME/$BLOCK_NAME
-separator_block_width=15
 # Define the custom separator in global properties for boilerplate
-full_text=  
 align=center
-color=#666666
-separator=false
-separator_block_width=0
-
-[window title]
-command=xdotool getactivewindow getwindowname
-interval=1
 color=#ffffff
-min_width=400
-align=center
+full_text= 
+separator=false
+separator_block_width=7
+min_width=12
 
-[separator]
+# [window title]
+# command=xdotool getactivewindow getwindowname
+# interval=1
+# min_width=400
+# align=center
 
 [music]
 label= 
 command=$LOCAL_DIR/music
 interval=2
-color=#ff8a8a
-border=#ff8a8a
+color=#c7a3e3
+border=#8f4ce0
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=$BORDER_W
 
 [separator]
 
@@ -62,12 +62,12 @@ border_bottom=2
 command=$LOCAL_DIR/keyboard
 interval=2
 label=  
-color=#ffffff
-border=#1990B7
+color=#69e0ff
+border=#1990b7
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=$BORDER_W
 
 [separator]
 
@@ -76,11 +76,12 @@ command=$LOCAL_DIR/updates-arch
 label= 
 interval=1800
 markup=pango
-color=#000000
-background=#888888
-border=#888888
-border_right=5
-border_left=5
+color=#ff93d3
+border=#ff3393
+border_right=0
+border_left=0
+border_top=0
+border_bottom=$BORDER_W
 markup=pango
 
 [separator]
@@ -90,11 +91,12 @@ command=$LOCAL_DIR/disk
 label= /h:
 instance=/home
 interval=30
-color=#000000
-background=#ffbb33
+color=#ffdd88
 border=#ffbb33
-border_right=5
-border_left=5
+border_right=0
+border_left=0
+border_top=0
+border_bottom=$BORDER_W
 markup=pango
 
 [separator]
@@ -102,33 +104,38 @@ markup=pango
 [cpu]
 command=$LOCAL_DIR/cpu
 interval=10
-color=#000000
-background=#33aa7a
+color=#66ffba
 border=#33aa7a
-border_right=5
-border_left=5
+border_right=0
+border_left=0
+border_top=0
+border_bottom=$BORDER_W
+
+[separator]
 
 [memory]
 command=$LOCAL_DIR/memory
 label= 
 interval=5
-color=#000000
-background=#ff9a9a
-border=#ff9a9a
-border_right=5
-border_left=5
+color=#ffa1a4
+border=#ff7060
+border_right=0
+border_left=0
+border_top=0
+border_bottom=$BORDER_W
 
 [separator]
 
 [pavol]
 command=$LOCAL_DIR/volume
 interval=1
-color=#ffffff
-border=#2aaa4a
+color=#66ffff
+border=#00aaaa
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=$BORDER_W
+
 
 [battery]
 command=$LOCAL_DIR/battery
@@ -139,9 +146,10 @@ markup=pango
 command=$LOCAL_DIR/time
 markup=pango
 interval=5
-color=#000000
-background=#4488bb
-border=#4488bb
-border_right=5
-border_left=5
+color=#dcffa7
+border=#92d928
+border_top=0
+border_right=0
+border_left=0
+border_bottom=$BORDER_W
 
