--- a/env/.env_global
+++ b/env/.env_global
@@ -37,6 +37,13 @@ setopt +o nomatch
 # ENVIRONMENT VARIABLES
 #
 
+# zsh history
+HISTSIZE=10000
+SAVEHIST=10000
+HISTFILE=~/.zsh_history
+bindkey -v
+bindkey '^R' history-incremental-search-backward
+
 # GPG Key
 export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 
@@ -153,6 +160,9 @@ do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
 
 # Load z
 do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
+
+# Load history substring search
+do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-search.plugin.zsh
 
 #
 # ENVIRONMENT INIT
