--- a/i3/config
+++ b/i3/config
@@ -442,11 +442,11 @@ bar {
         background #000000
         statusline #ffffff
  
-        #class             border  backgr  text
+        #class             border  backgr  text   
         focused_workspace  #ffbb33 #000000 #ffbb33
         inactive_workspace #000000 #000000 #ffffff
         active_workspace   #000000 #000000 #ffffff
-        urgent_workspace   #000000 #000000 #ffffff
+        urgent_workspace   #00ff00 #006600 #ffffff
   }
   i3bar_command i3bar
   status_command i3blocks -c $HOME/.config/i3blocks/config
