--- a/i3blocks/config
+++ b/i3blocks/config
@@ -32,10 +32,11 @@ SCRIPT_DIR=/usr/lib/i3blocks
 command=$SCRIPT_DIR/$BLOCK_NAME/$BLOCK_NAME
 # Define the custom separator in global properties for boilerplate
 align=center
-color=#444444
-full_text=◀▶
+color=#333333
+background=#000000
+full_text=:|:
 separator=false
-separator_block_width=18
+separator_block_width=28
 
 # [window title]
 # command=xdotool getactivewindow getwindowname
@@ -44,42 +45,41 @@ separator_block_width=18
 # align=center
 
 [music]
-label= 
 command=$LOCAL_DIR/music
 interval=2
-color=#c7a3e3
+color=#dfacff
 border=#8f4ce0
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [keyboard]
 command=$LOCAL_DIR/keyboard
 interval=2
-label=  
-color=#69e0ff
+color=#ffffff
 border=#1990b7
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [updates-arch]
 command=$LOCAL_DIR/updates-arch
-label= 
 interval=1800
 markup=pango
-color=#ff93d3
+color=#ffffff
 border=#ff3393
 border_right=0
 border_left=0
 border_top=0
-border_bottom=2
+border_bottom=1
 markup=pango
 
 [separator]
@@ -94,7 +94,7 @@ markup=pango
 # border_right=0
 # border_left=0
 # border_top=0
-# border_bottom=2
+# border_bottom=1
 # markup=pango
 
 # [separator]
@@ -102,56 +102,59 @@ markup=pango
 [cpu]
 command=$LOCAL_DIR/cpu
 interval=10
-color=#66ffba
+color=#ffffff
 border=#33aa7a
 border_right=0
 border_left=0
 border_top=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [memory]
 command=$LOCAL_DIR/memory
-label= 
 interval=5
-color=#ffa1a4
+color=#ffffff
 border=#ff7060
 border_right=0
 border_left=0
 border_top=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [brightness]
 command=$LOCAL_DIR/brightness
-label= 
 interval=1
-color=#999900
-border=#999900
+color=#ffffff
+border=#aaaa00
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [pavol]
 command=$LOCAL_DIR/volume &
 interval=1
-color=#66ffff
+color=#ffffff
 border=#00aaaa
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
+border_bottom=1
+markup=pango
 
 [separator]
 
 [battery]
 command=$LOCAL_DIR/battery
-interval=30
+color=#ffffff
+interval=15
 markup=pango
 
 [separator]
@@ -160,14 +163,12 @@ markup=pango
 command=$LOCAL_DIR/time
 markup=pango
 interval=1
-color=#dcffa7
+color=#ffffff
 border=#92d928
 border_top=0
 border_right=0
 border_left=0
-border_bottom=2
-
-[separator]
+border_bottom=1
 
 [separator]
 full_text=
