--- a/i3/config
+++ b/i3/config
@@ -401,6 +401,11 @@ exec --no-startup-id pasystray
 #
 exec --no-startup-id mons -a > /dev/null 2>&1
 
+#
+# playerctld
+#
+exec --no-startup-id playerctld
+
 
 #
 # UDISKIE - automount
