feat: time color

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -169,7 +169,7 @@ command=$LOCAL_DIR/time
 markup=pango
 interval=1
 color=#ffffff
-border=#92d928
+border=#668cff
 border_top=0
 border_right=0
 border_left=0
